# scc-compare

./: CMakeLists.txt  README.md  check.py  clean.py  graph.cpp  graph.h  lib.h  main.cpp  run.sh  scc-epinions-output.txt
